<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/animation_list"
        android:paddingLeft="30dp"
        android:id="@+id/container"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="298dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="101dp"
            android:textAlignment="center"
            android:text="@string/admin_login"
            android:textAllCaps="true"
            android:textColor="@color/grey_300"
            android:textSize="25sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/edittext_theme"
            android:hint="@string/username_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="@color/grey_white_1000"
            android:textColorHint="@color/grey_300"
            android:textSize="13sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp" />


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_theme"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:textColor="@color/grey_white_1000"
            android:textColorHint="@color/grey_300"
            android:textSize="13sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_theme"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/grey_300" />

        <View
            android:layout_width="match_parent"
            android:layout_height="4dp" />

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_theme"
            android:text="@string/register"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:layout_marginBottom="24dp"
            android:textColor="@color/grey_300" />


        <TextView
            android:layout_width="329dp"
            android:layout_height="25dp"
            android:layout_marginBottom="24dp"
            android:text="OR"
            android:textAlignment="center"
            android:textColor="@color/grey_300"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/forgotpassword"
            android:layout_width="329dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/grey_300" />


    </LinearLayout>



</LinearLayout>